# NyHooks

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md
cmake/: imgui.cmake
src/: Dllmain.cpp  Exports.cpp  Exports.hpp  Framework.h  Pch.hpp
src/Core/: Core.cpp  Core.hpp
src/Core/DirectX/: DirectX.cpp  DirectX.hpp  Texture.cpp  Texture.hpp
src/Core/Hooking/: HookingManager.cpp  HookingManager.hpp
src/Core/Hooking/Types/: Detour.cpp  Detour.hpp  Inline.cpp  Inline.hpp
src/Core/Memory/: MemoryManager.cpp  MemoryManager.hpp  Module.cpp  Module.hpp  ModuleManager.cpp  ModuleManager.hpp  Pointer.hpp
src/Util/: Memory.cpp  Memory.hpp  Timer.cpp  Timer.hpp  VectorMap.hpp  stb_image.h
src/games/: Ny.cpp  Ny.hpp
src/games/Classes/: type.hpp
src/games/Classes/base/: CBaseDC.hpp  CBaseModelInfo.hpp  CVirtualBase.hpp  PoolFlag.hpp  datBase.hpp  fwBasePool.hpp  pgBase.hpp  pgStreamableBase.hpp
src/games/Classes/rage/: BlockMap.hpp  Color32.hpp  Matrix44.hpp  Quaternion.hpp  atArray.hpp  fwPool.hpp  fwRect.hpp  grcTexture.hpp  pgCollection.hpp  pgDictionary.hpp  pgPtr.hpp  pgRef.hpp  sysMemAllocator.hpp  sysUseAllocator.hpp  vector.hpp
src/games/Classes/script/: scrNativeCallContext.hpp  scrNativeRegistration.hpp  scrNativeRegistrationTable.hpp
src/games/Comp/File/: File.cpp  File.hpp
src/games/Comp/NativeInvoker/: Crossmap.hpp  NativeInvoker.cpp  NativeInvoker.hpp  Natives.hpp
src/games/Comp/Pool/: Pool.cpp  Pool.hpp
src/games/Comp/Render/: Render.cpp  Render.hpp
src/games/Comp/ScriptManager/: Script.cpp  Script.hpp  ScriptManager.cpp  (+1 more)
(+5 files in other folders)
